--- a/nginx/robot_nginx.conf
+++ b/nginx/robot_nginx.conf
@@ -2,6 +2,7 @@
 upstream django {
     ip_hash;
     server backend:8080;
+    # server frontend:3000;
 }
 
 
@@ -16,9 +17,9 @@ server {
     # max upload size
     client_max_body_size 100M; # adjust to saste
 
-    #location /static {
-    #    alias /static;
-    #}
+    location /static {
+       alias /static;
+    }
 
     #location /images {
     #    alias /images;
@@ -29,9 +30,27 @@ server {
     #}
 
     # Finally, send all non-media requests to the Django server.
+    # location / {
+    #     proxy_pass http://frontend:3000;
+    #     proxy_connect_timeout 120s;
+    #     proxy_read_timeout 120s;
+    #     proxy_send_timeout 120s;
+    # }
+
+    # Use this option if npm run build to release pages.
     location / {
+        root  /frontend/dist;
+    }
+
+    location /robot_api/ {
         uwsgi_pass  django;
-        # the uwsgi_params file you installed
+        include     /etc/nginx/uwsgi_params;
+    }
+
+    location /admin/ {
+        uwsgi_pass  django;
         include     /etc/nginx/uwsgi_params;
     }
 }
+
+server_tokens off;
