--- a/uwsgi/uwsgi.ini
+++ b/uwsgi/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
-chdir = /app/robot_site
+chdir = /app
 module = robot_site.wsgi:application
 socket = :8080
-wsgi-file = /app/robot_site/robot_site/wsgi.py
+wsgi-file = /app/robot_site/wsgi.py
 logto = /uwsgi/uwsgi.log
 py-autoreload = 1
 master = true
