success get/post from frontend to backend

--- a/nginx/robot_nginx.conf
+++ b/nginx/robot_nginx.conf
@@ -5,13 +5,12 @@ upstream django {
     # server frontend:3000;
 }
 
-
 # configuration of the server
 server {
     # the port your site will be served on
-    listen      8000;
+    listen      80;
     # the domain name it will serve for
-    server_name 'localhost'; # substitute your machine's IP address or FQDN
+    server_name '127.0.0.1'; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
     # max upload size
@@ -21,25 +20,10 @@ server {
        alias /static;
     }
 
-    #location /images {
-    #    alias /images;
-    #}
-
-    #location /data {
-    #    alias /data;
-    #}
-
-    # Finally, send all non-media requests to the Django server.
-    # location / {
-    #     proxy_pass http://frontend:3000;
-    #     proxy_connect_timeout 120s;
-    #     proxy_read_timeout 120s;
-    #     proxy_send_timeout 120s;
-    # }
-
     # Use this option if npm run build to release pages.
     location / {
         root  /frontend/dist;
+        try_files $uri /index.html;
     }
 
     location /robot_api/ {
@@ -51,6 +35,14 @@ server {
         uwsgi_pass  django;
         include     /etc/nginx/uwsgi_params;
     }
+
+    #location /images {
+    #    alias /images;
+    #}
+
+    #location /data {
+    #    alias /data;
+    #}
 }
 
-server_tokens off;
+# server_tokens off;
