--- a/nginx/robot_nginx.conf
+++ b/nginx/robot_nginx.conf
@@ -1,24 +1,26 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
+
 # the upstream component nginx needs to connect to
 upstream django {
-    ip_hash;
-    server backend:8080;
-    # server frontend:3000;
+    server robot.backend:8080;
 }
 
 # configuration of the server
 server {
     # the port your site will be served on
-    listen      80;
+    listen       80;
+    listen  [::]:80;
     # the domain name it will serve for
-    server_name '127.0.0.1'; # substitute your machine's IP address or FQDN
+    server_name 127.0.0.1; # substitute your machine's IP address or FQDN
+    server_tokens off;
     charset     utf-8;
 
     # max upload size
     client_max_body_size 100M; # adjust to saste
-
-    location /static {
-       alias /static;
-    }
 
     # Use this option if npm run build to release pages.
     location / {
@@ -27,13 +29,30 @@ server {
     }
 
     location /robot_api/ {
-        uwsgi_pass  django;
-        include     /etc/nginx/uwsgi_params;
+        proxy_pass http://django;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+        # proxy_set_header Host $server_name:$server_port;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /admin/ {
-        uwsgi_pass  django;
-        include     /etc/nginx/uwsgi_params;
+        proxy_pass http://django;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+
+    location /static {
+       alias /static;
     }
 
     #location /images {
@@ -44,5 +63,3 @@ server {
     #    alias /data;
     #}
 }
-
-# server_tokens off;
